implementing cs on my app

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="class">
+    <div class="container">
         <h1>Currenct converter</h1>
 
         <form>
@@ -27,9 +29,9 @@
                         <option value="AUD">AUD</option>
                     </select>
                 </div>
-
             </div>
-            <div class="to"></div>
+            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+            <div class="to">
              <p>To</p>
                 <div class="select-container">
                     <img src="https://flagsapi.com/IN/flat/64.png">
@@ -40,10 +42,13 @@
                         <option value="AUD">AUD</option>
                     </select>
                 </div>
+                </div>
           </div>
-          <div class="msg"> 1USD=80INR</div>
+          <div class="msg"> 1USD=80 INR</div>
           <button>Get Exchange Rate</button>
         </form>
     </div>
+    <script src="app.js"></script>
+    <script src="code.js"></script>
 </body>
 </html>
