--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form>
           <div class="amount">
             <p>Enter amount</p>
-            <input value="100" type="text">
+            <input value="1" type="text">
           </div>
 
           <div class="dropdown">
@@ -23,10 +23,7 @@
                 <div class="select-container">
                     <img src="https://flagsapi.com/US/flat/64.png">
                     <select name="from">
-                        <option value="USD">USD</option>
-                        <option value="INR">INR</option>
-                        <option value="EUR">EUR</option>
-                        <option value="AUD">AUD</option>
+                        
                     </select>
                 </div>
             </div>
@@ -35,20 +32,17 @@
              <p>To</p>
                 <div class="select-container">
                     <img src="https://flagsapi.com/IN/flat/64.png">
-                    <select name="from">
-                        <option value="USD">USD</option>
-                        <option value="INR" selected>INR</option>
-                        <option value="EUR">EUR</option>
-                        <option value="AUD">AUD</option>
+                    <select name="to">
+
                     </select>
                 </div>
                 </div>
           </div>
-          <div class="msg"> 1USD=80 INR</div>
+          <div class="msg"> 1USD=86.27 INR</div>
           <button>Get Exchange Rate</button>
         </form>
     </div>
-    <script src="app.js"></script>
     <script src="code.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
